# EHO-token

./: .gitignore  LICENSE  README.md
contracts/cw20-eho/: Cargo.toml
contracts/cw20-eho/examples/: schema.rs
contracts/cw20-eho/schema/: cw20_eho.json
contracts/cw20-eho/src/: allowances.rs  contract.rs  enumerable.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/presale-eho/: Cargo.toml  NOTICE  README.md
contracts/presale-eho/examples/: schema.rs
contracts/presale-eho/schema/: config_response.json  contribution_of_response.json  execute_msg.json  instantiate_msg.json  is_whitelisted_response.json  query_msg.json  state_response.json
contracts/presale-eho/src/: README.md  contract.rs  error.rs  msg.rs  state.rs
contracts/presale-eho/tests/: integration.rs
metadata/: token.json
