[package]
name = "presale-eho"
version = "0.1.0"
authors = ["Cognitive Echo Dev Team"]
description = "Presale and crowdfunding contract for the Cognitive Echo ($EHO) project"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.17.0
"""

[dependencies]
cw-controllers = "3.0.0"
semver = "1.0.26"
cosmwasm-std = "2.1.5"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0" }
cosmwasm-schema = { version = "2.1.5" }

[dev-dependencies]
cw-multi-test = "2.2.0"
cw-utils = "2.0.0"
bech32 = "0.11.0"
cw20-eho = { path = "../cw20-eho", features = ["library"] }
